// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. landscape default modal 1`] = `
<View>
  <Modal>
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#000000",
            "flex": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 20,
          }
        }
      />
      <View
        style={
          Object {
            "padding": 20,
            "position": "relative",
            "zIndex": 2,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "borderRadius": 30,
              "height": 30,
              "justifyContent": "center",
              "opacity": 1,
              "width": 30,
            }
          }
        >
          <Image
            style={
              Object {
                "height": "85%",
                "width": "85%",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "paddingBottom": 20,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 20,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "flexGrow": 1,
                "transform": Array [
                  Object {
                    "translateX": -0,
                  },
                  Object {
                    "translateY": -0,
                  },
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateY": 0,
                  },
                  Object {
                    "scale": 1,
                  },
                  Object {
                    "translateX": -0,
                  },
                  Object {
                    "translateY": -0,
                  },
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateY": 0,
                  },
                  Object {
                    "rotate": "0 deg",
                  },
                  Object {
                    "perspective": 1000,
                  },
                ],
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 0,
                    "height": "100%",
                    "overflow": "hidden",
                    "position": "absolute",
                    "width": "100%",
                  }
                }
              >
                <Image
                  style={
                    Object {
                      "height": "100%",
                      "position": "absolute",
                      "resizeMode": "contain",
                      "width": "100%",
                    }
                  }
                />
                <Image
                  style={
                    Object {
                      "height": "100%",
                      "position": "absolute",
                      "resizeMode": "contain",
                      "width": "100%",
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "height": "100%",
                    "opacity": 1,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#EDEDED",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Image
                    style={
                      Object {
                        "width": "25%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 0,
            "height": 140,
            "justifyContent": "flex-end",
            "marginTop": "auto",
            "position": "relative",
            "width": "100%",
            "zIndex": 2,
          }
        }
      >
        <ARTSurfaceView
          style={
            Object {
              "bottom": 0,
              "height": 140,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 750,
            }
          }
        >
          <ARTShape />
        </ARTSurfaceView>
        <View
          style={
            Object {
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            }
          }
        >
          <View
            style={
              Object {
                "margin": 20,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 15,
                  "lineHeight": 15,
                }
              }
            >
              Caption
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 10,
                  "lineHeight": 10,
                  "marginTop": 5,
                }
              }
            >
              Credits
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <View
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <View
        style={
          Object {
            "borderRadius": 0,
            "height": "100%",
            "overflow": "hidden",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <Image
          style={
            Object {
              "height": "100%",
              "position": "absolute",
              "resizeMode": "contain",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "height": "100%",
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#EDEDED",
              "justifyContent": "center",
            }
          }
        >
          <Image
            style={
              Object {
                "width": "25%",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`2. portrait default modal 1`] = `
<View>
  <Modal>
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#000000",
            "flex": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 20,
          }
        }
      />
      <View
        style={
          Object {
            "padding": 20,
            "position": "relative",
            "zIndex": 2,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "borderRadius": 30,
              "height": 30,
              "justifyContent": "center",
              "opacity": 1,
              "width": 30,
            }
          }
        >
          <Image
            style={
              Object {
                "height": "85%",
                "width": "85%",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "paddingBottom": 20,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 20,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "flexGrow": 1,
                "transform": Array [
                  Object {
                    "translateX": -0,
                  },
                  Object {
                    "translateY": -0,
                  },
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateY": 0,
                  },
                  Object {
                    "scale": 1,
                  },
                  Object {
                    "translateX": -0,
                  },
                  Object {
                    "translateY": -0,
                  },
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateY": 0,
                  },
                  Object {
                    "rotate": "0 deg",
                  },
                  Object {
                    "perspective": 1000,
                  },
                ],
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 0,
                    "height": "100%",
                    "overflow": "hidden",
                    "position": "absolute",
                    "width": "100%",
                  }
                }
              >
                <Image
                  style={
                    Object {
                      "height": "100%",
                      "position": "absolute",
                      "resizeMode": "contain",
                      "width": "100%",
                    }
                  }
                />
                <Image
                  style={
                    Object {
                      "height": "100%",
                      "position": "absolute",
                      "resizeMode": "contain",
                      "width": "100%",
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "height": "100%",
                    "opacity": 1,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#EDEDED",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Image
                    style={
                      Object {
                        "width": "25%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 0,
            "height": 140,
            "justifyContent": "flex-end",
            "marginTop": "auto",
            "position": "relative",
            "width": "100%",
            "zIndex": 2,
          }
        }
      >
        <ARTSurfaceView
          style={
            Object {
              "bottom": 0,
              "height": 140,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 750,
            }
          }
        >
          <ARTShape />
        </ARTSurfaceView>
        <View
          style={
            Object {
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            }
          }
        >
          <View
            style={
              Object {
                "margin": 20,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 15,
                  "lineHeight": 15,
                }
              }
            >
              Caption
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 10,
                  "lineHeight": 10,
                  "marginTop": 5,
                }
              }
            >
              Credits
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <View
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <View
        style={
          Object {
            "borderRadius": 0,
            "height": "100%",
            "overflow": "hidden",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <Image
          style={
            Object {
              "height": "100%",
              "position": "absolute",
              "resizeMode": "contain",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "height": "100%",
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#EDEDED",
              "justifyContent": "center",
            }
          }
        >
          <Image
            style={
              Object {
                "width": "25%",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`3. tablet landscape default modal 1`] = `
<View>
  <Modal>
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#000000",
            "flex": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
          }
        }
      />
      <View
        style={
          Object {
            "padding": 15,
            "position": "relative",
            "zIndex": 2,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "borderRadius": 25,
              "height": 25,
              "justifyContent": "center",
              "opacity": 1,
              "width": 25,
            }
          }
        >
          <Image
            style={
              Object {
                "height": "85%",
                "width": "85%",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "flexGrow": 1,
                "transform": Array [
                  Object {
                    "translateX": -0,
                  },
                  Object {
                    "translateY": -0,
                  },
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateY": 0,
                  },
                  Object {
                    "scale": 1,
                  },
                  Object {
                    "translateX": -0,
                  },
                  Object {
                    "translateY": -0,
                  },
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateY": 0,
                  },
                  Object {
                    "rotate": "0 deg",
                  },
                  Object {
                    "perspective": 1000,
                  },
                ],
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 0,
                    "height": "100%",
                    "overflow": "hidden",
                    "position": "absolute",
                    "width": "100%",
                  }
                }
              >
                <Image
                  style={
                    Object {
                      "height": "100%",
                      "position": "absolute",
                      "resizeMode": "contain",
                      "width": "100%",
                    }
                  }
                />
                <Image
                  style={
                    Object {
                      "height": "100%",
                      "position": "absolute",
                      "resizeMode": "contain",
                      "width": "100%",
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "height": "100%",
                    "opacity": 1,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "borderRadius": 0,
                      "height": "100%",
                      "overflow": "hidden",
                      "position": "absolute",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    style={
                      Object {
                        "height": "100%",
                        "position": "absolute",
                        "resizeMode": "contain",
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 0,
            "height": 140,
            "justifyContent": "flex-end",
            "marginTop": "auto",
            "position": "relative",
            "width": "100%",
            "zIndex": 2,
          }
        }
      >
        <ARTSurfaceView
          style={
            Object {
              "bottom": 0,
              "height": 140,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 660,
            }
          }
        >
          <ARTShape />
        </ARTSurfaceView>
        <View
          style={
            Object {
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            }
          }
        >
          <View
            style={
              Object {
                "margin": 15,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 15,
                  "lineHeight": 15,
                }
              }
            >
              Caption
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 10,
                  "lineHeight": 10,
                  "marginTop": 5,
                }
              }
            >
              Credits
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <View
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <View
        style={
          Object {
            "borderRadius": 0,
            "height": "100%",
            "overflow": "hidden",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <Image
          style={
            Object {
              "height": "100%",
              "position": "absolute",
              "resizeMode": "contain",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "height": "100%",
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "borderRadius": 0,
              "height": "100%",
              "overflow": "hidden",
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <Image
            style={
              Object {
                "height": "100%",
                "position": "absolute",
                "resizeMode": "contain",
                "width": "100%",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`4. tablet portrait default modal 1`] = `
<View>
  <Modal>
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#000000",
            "flex": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
          }
        }
      />
      <View
        style={
          Object {
            "padding": 15,
            "position": "relative",
            "zIndex": 2,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "borderRadius": 25,
              "height": 25,
              "justifyContent": "center",
              "opacity": 1,
              "width": 25,
            }
          }
        >
          <Image
            style={
              Object {
                "height": "85%",
                "width": "85%",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
            "zIndex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "flexGrow": 1,
                "transform": Array [
                  Object {
                    "translateX": -0,
                  },
                  Object {
                    "translateY": -0,
                  },
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateY": 0,
                  },
                  Object {
                    "scale": 1,
                  },
                  Object {
                    "translateX": -0,
                  },
                  Object {
                    "translateY": -0,
                  },
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateY": 0,
                  },
                  Object {
                    "rotate": "0 deg",
                  },
                  Object {
                    "perspective": 1000,
                  },
                ],
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "position": "absolute",
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 0,
                    "height": "100%",
                    "overflow": "hidden",
                    "position": "absolute",
                    "width": "100%",
                  }
                }
              >
                <Image
                  style={
                    Object {
                      "height": "100%",
                      "position": "absolute",
                      "resizeMode": "contain",
                      "width": "100%",
                    }
                  }
                />
                <Image
                  style={
                    Object {
                      "height": "100%",
                      "position": "absolute",
                      "resizeMode": "contain",
                      "width": "100%",
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "height": "100%",
                    "opacity": 1,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "borderRadius": 0,
                      "height": "100%",
                      "overflow": "hidden",
                      "position": "absolute",
                      "width": "100%",
                    }
                  }
                >
                  <Image
                    style={
                      Object {
                        "height": "100%",
                        "position": "absolute",
                        "resizeMode": "contain",
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 0,
            "height": 140,
            "justifyContent": "flex-end",
            "marginTop": "auto",
            "position": "relative",
            "width": "100%",
            "zIndex": 2,
          }
        }
      >
        <ARTSurfaceView
          style={
            Object {
              "bottom": 0,
              "height": 140,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 660,
            }
          }
        >
          <ARTShape />
        </ARTSurfaceView>
        <View
          style={
            Object {
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            }
          }
        >
          <View
            style={
              Object {
                "margin": 15,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 15,
                  "lineHeight": 15,
                }
              }
            >
              Caption
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 10,
                  "lineHeight": 10,
                  "marginTop": 5,
                }
              }
            >
              Credits
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <View
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <View
        style={
          Object {
            "borderRadius": 0,
            "height": "100%",
            "overflow": "hidden",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <Image
          style={
            Object {
              "height": "100%",
              "position": "absolute",
              "resizeMode": "contain",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "height": "100%",
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "borderRadius": 0,
              "height": "100%",
              "overflow": "hidden",
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <Image
            style={
              Object {
                "height": "100%",
                "position": "absolute",
                "resizeMode": "contain",
                "width": "100%",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
